--- a/README
+++ b/README
@@ -60,9 +60,9 @@ welcomed!  Please send these to:
               Australia
 
     E-mail:   J.Zaitseff@zap.org.au
-    Web:      http://www.zap.org.au/software/trader/
+    Web:      https://www.zap.org.au/software/trader/
     FTP:      ftp://ftp.zap.org.au/pub/trader/
-              http://ftp.zap.org.au/pub/trader/
+              https://ftp.zap.org.au/pub/trader/
 
 
 Copyright
