--- a/doc/trader.6
+++ b/doc/trader.6
@@ -19,7 +19,7 @@
 .\" General Public License for more details.
 .\"
 .\" You should have received a copy of the GNU General Public License
-.\" along with this program.  If not, see http://www.gnu.org/licenses/.
+.\" along with this program.  If not, see https://www.gnu.org/licenses/.
 .\"
 .\"
 .\" *********************************************************************
@@ -203,11 +203,11 @@ Australia
 .MTO J.Zaitseff@zap.org.au
 .PD 0
 .IP Web: 10n
-.URL http://www.zap.org.au/software/trader/
+.URL https://www.zap.org.au/software/trader/
 .IP FTP: 10n
 .FTP ftp://ftp.zap.org.au/pub/trader/
 .br
-.URL http://ftp.zap.org.au/pub/trader/
+.URL https://ftp.zap.org.au/pub/trader/
 .PD
 .PP
 .\" *********************************************************************
@@ -226,7 +226,7 @@ Public License for more details.
 .PP
 You should have received a copy of the GNU General Public License along
 with this program.  If not, see the
-.URL http://www.gnu.org/licenses/ "GNU licenses web page" .
+.URL https://www.gnu.org/licenses/ "GNU licenses web page" .
 .PP
 Even though the GNU General Public License does \fInot\fR require you to
 send your modifications back to the author, it is considered \*(lqgood
@@ -278,6 +278,6 @@ correct bugs.  Now you, too, can run this small piece of computing
 history!
 .\" *********************************************************************
 .SH "SEE ALSO"
-.URL http://www.zap.org.au/software/trader/ "Star Traders home page"
+.URL https://www.zap.org.au/software/trader/ "Star Traders home page"
 .\" *********************************************************************
 .\" End of file
