--- a/lib/README
+++ b/lib/README
@@ -7,4 +7,4 @@
 
 This directory, lib,  contains source code as generated  by the Gnulib GNU
 Portability  Library "gnulib-tool" script.   See the  project web  site at
-http://www.gnu.org/software/gnulib/ for more information.
+https://www.gnu.org/software/gnulib/ for more information.
