Added the Spanish translation by Francisco Javier Serrador to the master branch

--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ location: https://www.zap.org.au/gitweb/trader.git
 Version 7.13 (not yet released)
 -------------------------------
 
-(No news yet)
+Added the Spanish translation, with thanks to Francisco Javier Serrador.
 
 
 Version 7.12 (24th August, 2017)
