Mention the latest Git snapshot of gnulib in NEWS

--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,8 @@ location: https://www.zap.org.au/gitweb/trader.git
 Version 7.13 (not yet released)
 -------------------------------
 
-Added the Spanish translation, with thanks to Francisco Javier Serrador.
+Added the Spanish translation,  with thanks to  Francisco Javier Serrador.
+Updated to the latest Git snapshot of the Gnulib GNU Portability Library.
 
 
 Version 7.12 (24th August, 2017)
