--- a/po/en_US.po
+++ b/po/en_US.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.13\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2017-08-24 15:17+1000\n"
+"POT-Creation-Date: 2018-03-30 14:46+1100\n"
 "PO-Revision-Date: 2018-03-30 11:43+1100\n"
 "Last-Translator: John Zaitseff <J.Zaitseff@zap.org.au>\n"
 "Language-Team: English (US) <(nothing)>\n"
@@ -698,8 +698,8 @@ msgstr "Old stock: "
 #: src/move.c:875
 #, c-format
 msgctxt "label"
-msgid "New Stock: "
-msgstr "New Stock: "
+msgid "New stock: "
+msgstr "New stock: "
 
 #. TRANSLATORS: "Bonus" refers to the bonus cash amount paid to
 #. each player after two companies merge.  %ls is the currency
