--- a/po/fi.po
+++ b/po/fi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.13\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2017-08-24 15:17+1000\n"
+"POT-Creation-Date: 2018-03-30 14:46+1100\n"
 "PO-Revision-Date: 2018-03-30 11:43+1100\n"
 "Last-Translator: Jorma Karvonen <karvonen.jorma@gmail.com>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
@@ -708,7 +708,7 @@ msgstr "Vanha osakekanta: "
 #: src/move.c:875
 #, c-format
 msgctxt "label"
-msgid "New Stock: "
+msgid "New stock: "
 msgstr "Uusi osakekanta:  "
 
 #. TRANSLATORS: "Bonus" refers to the bonus cash amount paid to
