--- a/po/hu.po
+++ b/po/hu.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.13\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2017-08-24 15:17+1000\n"
+"POT-Creation-Date: 2018-03-30 14:46+1100\n"
 "PO-Revision-Date: 2018-03-30 11:43+1100\n"
 "Last-Translator: Balázs Úr <urbalazs@gmail.com>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
@@ -701,7 +701,7 @@ msgstr "Régi részvény: "
 #: src/move.c:875
 #, c-format
 msgctxt "label"
-msgid "New Stock: "
+msgid "New stock: "
 msgstr "Új részvény:   "
 
 #. TRANSLATORS: "Bonus" refers to the bonus cash amount paid to
