--- a/po/ru.po
+++ b/po/ru.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.13\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2017-08-24 15:17+1000\n"
+"POT-Creation-Date: 2018-03-30 14:46+1100\n"
 "PO-Revision-Date: 2018-03-30 11:53+1100\n"
 "Last-Translator: Pavel Maryanov <acid@jack.kiev.ua>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
@@ -708,7 +708,7 @@ msgstr "Старые акции: "
 #: src/move.c:875
 #, c-format
 msgctxt "label"
-msgid "New Stock: "
+msgid "New stock: "
 msgstr "Новые акции:  "
 
 #. TRANSLATORS: "Bonus" refers to the bonus cash amount paid to
