--- a/po/ru.po
+++ b/po/ru.po
@@ -18,9 +18,9 @@ msgstr ""
 "Project-Id-Version: trader 7.13\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2018-03-30 14:46+1100\n"
-"PO-Revision-Date: 2018-04-04 20:05+1000\n"
+"PO-Revision-Date: 2018-04-04 20:13+1000\n"
 "Last-Translator: Pavel Maryanov <acid@jack.kiev.ua>\n"
-"Language-Team: Russian <gnu@mx.ru>\n"
+"Language-Team: Russian <gnu@d07.ru>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
