--- a/INSTALL
+++ b/INSTALL
@@ -170,7 +170,8 @@ following additional tools installed on your system to do so:
 
 1.  Autoconf v2.69 or later (https://www.gnu.org/software/autoconf/)
 2.  Automake v1.15 or later (https://www.gnu.org/software/automake/)
-3.  GNU Portability Library (https://www.gnu.org/software/gnulib/)
+3.  pkg-config v0.9.0 or later (https://pkg-config.freedesktop.org/)
+4.  GNU Portability Library (https://www.gnu.org/software/gnulib/)
 
 The  GNU Portability Library  may  be installed  by retrieving  the latest
 Gnulib source code from the Git repository:
