--- a/README
+++ b/README
@@ -61,8 +61,8 @@ welcomed!  Please send these to:
 
     E-mail:   J.Zaitseff@zap.org.au
     Web:      https://www.zap.org.au/software/trader/
-    FTP:      ftp://ftp.zap.org.au/pub/trader/
-              https://ftp.zap.org.au/pub/trader/
+    FTP:      https://ftp.zap.org.au/pub/trader/
+              ftp://ftp.zap.org.au/pub/trader/
 
 
 Copyright
