--- a/NEWS
+++ b/NEWS
@@ -21,8 +21,11 @@ Version 7.13 (not yet released)
 Added the Spanish translation,  with thanks to  Francisco Javier Serrador.
 Updated the Esperanto translation, with thanks to Felipe Castro.   Updated
 one string in the game for  consistency with other labels;  updated all PO
-translations to suit.  Updated  to the latest snapshot  of the  Gnulib GNU
-Portability Library.
+translations to suit.
+
+Updated to the latest snapshot of the  Gnulib GNU Portability Library.  In
+addition, updated the list of prerequisites in the INSTALL file and listed
+some more command line options for the configure script.
 
 
 Version 7.12 (24th August, 2017)
