--- a/m4/README
+++ b/m4/README
@@ -10,9 +10,10 @@ This directory, m4, contains M4 macros used by Autoconf.
 The following macros are from the Autoconf Archive project, as detailed on
 that project's web site, https://www.gnu.org/software/autoconf-archive/:
 
-    ax_append_flag.m4
-    ax_cflags_warn_all.m4
     ax_c___attribute__.m4
+    ax_cflags_warn_all.m4
+    ax_compiler_vendor.m4
+    ax_prepend_flag.m4
     ax_require_defined.m4
     ax_with_curses.m4
 
