--- a/NEWS
+++ b/NEWS
@@ -54,6 +54,7 @@ the following combinations:
 | Solaris 11.3 (x86_64)   | x86_64 |  | GNU C Compiler 4.8.2         | 2 |
 | Solaris 11.3 (x86_64)   | i386   |  | Oracle Developer Studio 12.6 | 3 |
 | Solaris 11.3 (x86_64)   | x86_64 |  | Oracle Developer Studio 12.6 | 4 |
+| Minix 3.4.0rc6          | i386   |  | Clang (LLVM) 3.6             | 5 |
 | Cygwin 2.10.0 (Win7SP1) | i686   |  | GNU C Compiler 7.3.0         |   |
 +-------------------------+--------+--+------------------------------+---+
 
@@ -68,6 +69,15 @@ Notes:
 2.  Using "./configure CC='gcc -m64'" for 64-bit user-space.
 3.  Using "./configure CC='/opt/developerstudio12.6/bin/cc'".
 4.  Using "./configure CC='/opt/developerstudio12.6/bin/cc -m64'".
+
+5.  Minix with the  gettext, libiconv and ncursesw packages installed with
+    "pkgin", using:
+
+        ./configure --with-libiconv-prfix=/usr/pkg   \
+                    --with-libintl-prefix=/usr/pkg   \
+                    --with-ncursesw --with-ncurses   \
+                    CURSES_CFLAGS=-I/usr/pkg/include \
+                    LDFLAGS=-L/usr/pkg/lib
 
 The following systems are known not to work at the current time; this list
 is almost certainly not exhaustive:
