--- a/m4/README
+++ b/m4/README
@@ -9,7 +9,7 @@ This directory, m4, contains M4 macros used by Autoconf.
 
 The following macros are custom-defined for Star Traders:
 
-    xopen_source.m4
+    xopen-source.m4
 
 The following macros are from the Autoconf Archive project, as detailed on
 that project's web site, https://www.gnu.org/software/autoconf-archive/:
