Correct the sentence from plural to singular form

--- a/m4/README
+++ b/m4/README
@@ -7,7 +7,7 @@
 
 This directory, m4, contains M4 macros used by Autoconf.
 
-The following macros are custom-defined for Star Traders:
+The following macro is custom-defined for Star Traders:
 
     xopen-source.m4
 
