Rename l_strfmon() and rewrite as xstrfmon() to handle POSIX locale better
Current and previous versions of ISO/IEC 9945-1 (POSIX), particularly SUSv3
(2001) and SUSv4 (2008), require strfmon() to return rather meaningless
strings when used with the POSIX "C" locale.  In particular, the standard
POSIX locale does not define a currency symbol, a monetary radix symbol
(decimal point) or a negative sign.  This means strfmon(..., "%n", -123.45)
is supposed to produce "12345" instead of something like "$-123.45"!

The new xstrfmon() overcomes these limitations by using snprintf() as
appropriate.

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,10 @@ location: https://www.zap.org.au/gitweb/trader.git
 Version 7.13 (not yet released)
 -------------------------------
 
+Modified the code to work more reliably on non-Glibc (GNU C Library) plat-
+forms,  particularly FreeBSD, Solaris and Cygwin,  when using the standard
+POSIX locale.
+
 Added the Spanish translation,  with thanks to  Francisco Javier Serrador.
 Updated the Esperanto translation, with thanks to Felipe Castro.
 
